<resources>
    <string name="app_name">My goods</string>
    <string name="add_model">Model</string>
    <string name="add_color">Color</string>
    <string name="add_size">Size</string>
    <string name="add_quantity">Quantity</string>
    <string name="add_price">Price</string>
    <string name="add_add">Add</string>
    <string name="allModel_q">Q</string>
    <string name="main_AllModel">All Model</string>
    <string name="main_Add">Add Shoes</string>
    <string name="main_selling_history">Selling History</string>
    <string name="history_deleteAll">Delete All</string>
    <string name="info_btn_sale">Sale</string>
    <string name="info_tv_id">ID</string>
    <string name="info_tv_size">S</string>
    <string name="info_tv_color">C</string>
    <string name="info_tv_model">M</string>
    <string name="info_tv_quantity">Q</string>
    <string name="info_tv_price">P</string>
</resources>