<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical"
    android:rowCount="3"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_rowWeight="1"
        android:elevation="24dp"
        android:layout_columnWeight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_btn_all_model"
                android:layout_width="226dp"
                android:layout_height="61dp"
                android:layout_marginTop="24dp"
                android:text="@string/main_AllModel"
                android:textAllCaps="false" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/all" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_rowWeight="1"
        android:elevation="12dp"
        android:layout_columnWeight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/addimage" />

            <Button
                android:id="@+id/main_btn_add"
                android:layout_width="226dp"
                android:layout_height="61dp"
                android:layout_centerVertical="true"
                android:text="@string/main_Add"
                android:textAllCaps="false" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_rowWeight="1"
        android:elevation="24dp"
        android:layout_columnWeight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#feca57"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/sale" />

            <Button
                android:id="@+id/main_btn_history"
                android:layout_alignParentBottom="true"
                android:layout_width="226dp"
                android:layout_height="61dp"
                android:text="@string/main_selling_history"
                android:textAllCaps="false" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</GridLayout>